FEAT: Embedded final charts and added supporting image files.

--- a/notebooks/Bank_Customer_Churn_Prediction.ipynb
+++ b/notebooks/Bank_Customer_Churn_Prediction.ipynb
@@ -2,7 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 25,
+   "id": "112a3f4b-d6af-4be7-9cb6-9dbe7fa19595",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%matplotlib inline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
    "id": "fc048918-5fc5-488b-9ac4-277a93644b72",
    "metadata": {},
    "outputs": [],
@@ -25,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 27,
    "id": "e88763f1-d946-4bc5-baa9-00acaa4e08d9",
    "metadata": {},
    "outputs": [
@@ -63,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 28,
    "id": "167a3b93-f7b9-4a64-9b3e-9b96854967ff",
    "metadata": {},
    "outputs": [
@@ -102,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 29,
    "id": "7178aaac-25f3-4d35-bee9-886ec5858a2e",
    "metadata": {},
    "outputs": [
@@ -123,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 30,
    "id": "57b41394-2e5f-4df3-8853-a0a0e2ef05e0",
    "metadata": {},
    "outputs": [
@@ -155,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 31,
    "id": "dff1f6bd-fd29-4fa7-9aa6-3de0b09ad3a7",
    "metadata": {},
    "outputs": [
@@ -187,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 32,
    "id": "5f72cdfe-fb22-4d0a-a211-a2f31beac86e",
    "metadata": {},
    "outputs": [
@@ -218,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 33,
    "id": "73dde012-0dcc-41f8-90c1-a7af38cdc4f3",
    "metadata": {},
    "outputs": [
@@ -251,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 34,
    "id": "a25bda6a-665e-4566-9b8b-c8fcdf5eb1f2",
    "metadata": {},
    "outputs": [
@@ -333,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 35,
    "id": "0daf6f54-e961-4919-b737-efe0520ae250",
    "metadata": {},
    "outputs": [
@@ -341,7 +351,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\USER\\AppData\\Local\\Temp\\ipykernel_3376\\1055506821.py:6: FutureWarning: \n",
+      "C:\\Users\\USER\\AppData\\Local\\Temp\\ipykernel_2728\\3093006416.py:6: FutureWarning: \n",
       "\n",
       "Passing `palette` without assigning `hue` is deprecated and will be removed in v0.14.0. Assign the `x` variable to `hue` and set `legend=False` for the same effect.\n",
       "\n",
@@ -376,12 +386,14 @@
     "for i, age in enumerate(age_churn.values):\n",
     "    plt.text(i, age + 1, f'{int(age)} years', ha='center', va='bottom')\n",
     "\n",
+    "# --- THE CRITICAL STEP: SAVE THE FIGURE ---\n",
+    "plt.savefig('age_churn_gap.png') \n",
     "plt.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 36,
    "id": "51b99fec-76d4-4511-b2b1-e3a1da67d4c6",
    "metadata": {},
    "outputs": [
@@ -389,7 +401,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\USER\\AppData\\Local\\Temp\\ipykernel_3376\\3121070922.py:6: FutureWarning: \n",
+      "C:\\Users\\USER\\AppData\\Local\\Temp\\ipykernel_2728\\1876346096.py:6: FutureWarning: \n",
       "\n",
       "Passing `palette` without assigning `hue` is deprecated and will be removed in v0.14.0. Assign the `x` variable to `hue` and set `legend=False` for the same effect.\n",
       "\n",
@@ -424,12 +436,14 @@
     "for i, balance in enumerate(balance_churn.values):\n",
     "    plt.text(i, balance + 5000, f'${int(balance):,}', ha='center')\n",
     "\n",
+    "# --- THE CRITICAL STEP: SAVE THE FIGURE ---\n",
+    "plt.savefig('balance_churn_threat.png')\n",
     "plt.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 37,
    "id": "592eed93-eea7-42e8-9073-06b890140262",
    "metadata": {},
    "outputs": [
@@ -461,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 38,
    "id": "7585a067-9318-447f-b1f6-5ffa46d5c7ab",
    "metadata": {},
    "outputs": [
@@ -495,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 39,
    "id": "a959cc4d-e194-4fa8-acce-5687cf65a905",
    "metadata": {},
    "outputs": [
@@ -526,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 40,
    "id": "68764227-157b-42e7-8bd6-82beb23ba17e",
    "metadata": {},
    "outputs": [
@@ -567,7 +581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 41,
    "id": "61443101-fffe-4acf-9fb5-babd1392b26f",
    "metadata": {},
    "outputs": [
@@ -615,7 +629,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 42,
    "id": "de7c2401-09fc-4336-94d1-62bca4bb6fa6",
    "metadata": {},
    "outputs": [
@@ -661,7 +675,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 43,
    "id": "6f858676-03f3-4d91-a331-2263ea2b17ca",
    "metadata": {},
    "outputs": [
@@ -701,7 +715,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 44,
    "id": "ed92cef3-3f16-4cef-8879-0639065880c0",
    "metadata": {},
    "outputs": [
@@ -744,7 +758,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 45,
    "id": "812ae196-9328-4a13-ad5c-f7984121fac4",
    "metadata": {},
    "outputs": [
@@ -774,7 +788,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 46,
    "id": "14b7e8e5-3aab-4bd9-bcd0-ef6ed1310cb6",
    "metadata": {},
    "outputs": [
